2012-04-02  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r112948.
        http://trac.webkit.org/changeset/112948
        https://bugs.webkit.org/show_bug.cgi?id=82961

        Someone else already checked in a similar change (Requested by
        sundiamonde on #webkit).

        * Scripts/webkitpy/layout_tests/port/webkit.py:
        (WebKitDriver._start):

2012-04-02  Adam Barth  <abarth@webkit.org>

        garden-o-matic isn't able to rebaseline audio failures
        https://bugs.webkit.org/show_bug.cgi?id=82957

        Reviewed by Chris Rogers.

        This patch just adds "wav" to the list of test suffixes and updates the
        unit tests to show that we're rebaselining audio tests results now too.

        * Scripts/webkitpy/tool/commands/rebaseline.py:
        * Scripts/webkitpy/tool/commands/rebaseline_unittest.py:
        (test_rebaseline_updates_expectations_file):

2012-04-02  Adam Barth  <abarth@webkit.org>

        garden-o-matic should let you listen to audio failures
        https://bugs.webkit.org/show_bug.cgi?id=82953

        Reviewed by Chris Rogers.

        Now that we've actually got an audio failure on the bots, we can clean
        up the last stray bugs.  This patch doesn't have any tests because I'm
        lame.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/garden-o-matic.html:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/results.js:
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/results.js:
        (.):

2012-04-02  Stephanie Lewis  <slewis@apple.com>

        run-webkit-tests --root fails if /usr/local/lib/libWebCoreTestSupport.dylib is not installed.
        https://bugs.webkit.org/show_bug.cgi?id=82552

        Reviewed by Dirk Pranke.

        Use DYLD_LIBRARY_PATH so we pick up the libWebCoreTestSupport.dylib located in the root.
